# cluttercal

./: .gitignore  README.md  setup.py
cluttercal/: cluttercal.py  cluttermask.py  cluttermask_odim.py
cpp/: CMakeLists.txt
cpp/src/: main.cpp
example/: Cluttercal process example.ipynb
notebook/: CPOL.ipynb  gen_qsub.ipynb
scripts/: national_archive.py  qrca.19.pbs  qrca.2.pbs  qrca.23.pbs  qrca.3.pbs  qrca.4.pbs  qrca.54.pbs  qrca.63.pbs  qrca.64.pbs  qrca.71.pbs  qrca.77.pbs  qrca.8.pbs  s3car_cluttercal.py
